# saiph

./: .gitignore  Analyzer.cpp  Analyzer.h  AnalyzerBus.cpp  AnalyzerBus.h  Announce.cpp  Announce.h  CMakeLists.txt  Command.cpp  Command.h  Connection.cpp  Connection.h  Coordinate.cpp  Coordinate.h  Debug.cpp  Debug.h  Dungeon.cpp  Dungeon.h  Event.h  EventBus.cpp  EventBus.h  Filter.cpp  Filter.h  Globals.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  ItemTracker.cpp  ItemTracker.h  Level.cpp  Level.h  Local.cpp  Local.h  Main.cpp  Main.h  Makefile  Map.cpp  Map.h  MessageParser.cpp  (+34 more)
Actions/: Action.cpp  Action.h  Answer.h  Apply.h  ApplyInDirection.h  Call.h  Drop.h  DropGold.h  Eat.h  EatCorpse.h  Engrave.h  Enhance.h  FarLook.h  Fight.h  Kick.cpp  Kick.h  ListInventory.cpp  ListInventory.h  ListPlayerAttributes.h  Look.h  Loot.h  Makefile  Move.cpp  Move.h  Name.h  Open.h  Pray.h  PutOn.cpp  PutOn.h  Remove.cpp  Remove.h  Rest.h  Search.h  Select.h  SelectMultiple.h  TakeOff.h  Throw.h  Unlock.h  Wear.h  Wield.h
Analyzers/: Amulet.cpp  Amulet.h  Analyzer.cpp  Analyzer.h  Armor.cpp  Armor.h  Beatitude.cpp  Beatitude.h  Blind.cpp  Blind.h  Dig.cpp  Dig.h  Donate.cpp  Donate.h  Door.cpp  Door.h  DoorAnalyzer.cpp  DoorAnalyzer.h  DungeonAnalyzer.cpp  DungeonAnalyzer.h  Elbereth.cpp  Elbereth.h  Enhance.cpp  Enhance.h  Excalibur.cpp  Excalibur.h  Explore.cpp  Explore.h  Explore.old.h  ExploreAnalyzer.cpp  ExploreAnalyzer.h  Fight.cpp  Fight.h  FightAnalyzer.cpp  FightAnalyzer.h  Food.cpp  Food.h  FoodAnalyzer.cpp  FoodAnalyzer.h  Fountain.cpp  (+54 more)
Analyzers/Sokoban/: boulders.h  solutions.h
Data/: Amulet.cpp  Amulet.h  Armor.cpp  Armor.h  ArmorData.cpp  ArmorData.h  Attack.cpp  Attack.h  Axe.cpp  Axe.h  Boomerang.cpp  Boomerang.h  Boots.cpp  Boots.h  BootsData.cpp  BootsData.h  Bow.cpp  Bow.h  BowAmmo.cpp  BowAmmo.h  BroadSword.cpp  BroadSword.h  Broadsword.cpp  Broadsword.h  Cloak.cpp  Cloak.h  CloakData.cpp  CloakData.h  Club.cpp  Club.h  Corpse.cpp  Corpse.h  CorpseData.cpp  CorpseData.h  Crossbow.cpp  Crossbow.h  CrossbowAmmo.cpp  Dagger.cpp  Dagger.h  Dart.cpp  (+95 more)
Events/: Beatify.h  CallInventoryItemRequestEvent.h  ChangedInventoryItems.cpp  ChangedInventoryItems.h  DropInventoryItems.h  EatItem.h  ElberethQuery.h  Event.cpp  Event.h  EventBus.cpp  EventBus.h  ItemsOnGround.h  Makefile  PickupItems.h  ReceivedItems.cpp  ReceivedItems.h  StashChanged.h  TakeMeThere.h  WantItems.h
Filters/: Makefile  MonsterFilter.cpp  MonsterFilter.h
include/: Command.h  Connection.h  Coordinate.h  Debug.h  EventBus.h  Globals.h  Inventory.h  Item.h  Level.h  Local.h  Monster.h  Point.h  Replay.h  Saiph.h  Stash.h  Telnet.h  Tile.h  World.h
include/Actions/: Action.h  Answer.h  Apply.h  ApplyInDirection.h  Call.h  Chat.h  Christen.h  Dip.h  Donate.h  Drop.h  DropGold.h  Eat.h  EatCorpse.h  Engrave.h  Enhance.h  FarLook.h  Fight.h  Kick.h  ListInventory.h  ListPlayerAttributes.h  Look.h  Loot.h  MergeStack.h  Move.h  Name.h  Open.h  Pay.h  Pray.h  PutOn.h  Remove.h  Rest.h  Search.h  SwapWeapon.h  TakeOff.h  Throw.h  Travel.h  TwoWeapon.h  Unlock.h  Wear.h  Wield.h
include/Analyzers/: Amulet.h  Analyzer.h  Armor.h  Beatitude.h  Blind.h  Dig.h  DiggingTool.h  Donate.h  Door.h  Elbereth.h  Enhance.h  Excalibur.h  Explore.h  Fight.h  Food.h  Genocide.h  Health.h  Lamp.h  Loot.h  Medusa.h  MonsterInfo.h  Passtune.h  Potion.h  Quest.h  RandomWalk.h  Scroll.h  Shop.h  Sokoban.h  Throne.h  Valkyrie.h  Vault.h  Wand.h  Weapon.h  Wish.h
include/Data/: Amulet.h  Armor.h  Axe.h  Boomerang.h  Boots.h  Bow.h  BowAmmo.h  Broadsword.h  Cloak.h  Crossbow.h  CrossbowAmmo.h  Dagger.h  Dart.h  Flail.h  Food.h  Gloves.h  Hammer.h  Helmet.h  Item.h  Javelin.h  Key.h  Knife.h  Lance.h  Longsword.h  Mace.h  Monster.h  MorningStar.h  Pickaxe.h  Polearm.h  Quarterstaff.h  Scimitar.h  Shield.h  Shirt.h  Shortsword.h  Shuriken.h  Sling.h  SlingAmmo.h  Spear.h  Suit.h  Trident.h  (+5 more)
include/Events/: Beatify.h  BuyItems.h  ChangedInventoryItems.h  ChangedSkills.h  EatItem.h  ElberethQuery.h  GotDiggingTool.h  ItemsOnGround.h  QuestStatus.h  ReceivedItems.h  RunAway.h  ShopDetected.h  ShoppingStatus.h  StashChanged.h  TakeMeThere.h  WantItems.h
nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
old/: CMakeLists.txt  README  TODO.sorear  nethackrc
old/include/: Command.h  Connection.h  Coordinate.h  Embed.h  Globals.h  Level.h  Local.h  Point.h  Replay.h  Saiph.h  Telnet.h  Tile.h  World.h
old/patches/: inline-sync.patch  situation.patch
old/scripts/: deaths_from_log  runsaiph
old/src/: Connection.cpp  Coordinate.cpp  Debug.cpp  Embed.cpp  EventBus.cpp  Inventory.cpp  Item.cpp  Local.cpp  Monster.cpp  Replay.cpp  Saiph.cpp  Tile.cpp
old/tests/: README  amulet_rs.t  barehand_trice.t  drop_armor_bug.t  excalibur_1.t  floating_eye_pathing.t  locked_shop_1.t  locked_shop_3.t  long_name.t  loot_monsterinfo.t  minetown_key_trouble.t  minetown_random_walk.t  pick_and_shop_1.t  pick_collection.t  portal.t  shop_stairs_mimic.t  skills_2.t  skills_3.t  skills_4.t  sleeping_mimic.t  sleeping_nymph.t  stressed_stairs.t  (+3 more)
patches/: situation.patch
scripts/: deaths_from_log  gen_situation_patch  parallel_repeater  runsaiph  saiphloop_rawrmage
src/: Command.cpp  Connection.cpp  Coordinate.cpp  Embed.cpp  EventBus.cpp  Inventory.cpp  Item.cpp  Level.cpp  Level.d  Local.cpp  Monster.cpp  Point.cpp  Point.d  Replay.cpp  Saiph.cpp  Saiph.d  Stash.cpp  Telnet.cpp  Tile.cpp  Tile.d  World.cpp  action.d  connection.d  coordinate.d  level.d  logger.d  main.d  point.d  saiph.d  tile.d  world.d
t/: vault.t
tests/: README  amulet_strangle.t  barehand_trice.t  boulder.t  boulder_2.t  buc_lizard.t  burdened_stressed_loop.t  cursed_gloves.t  death_parse.t  excalibur_2.t  kiting.t  locked_shop_2.t  medusa.t  mob_tracking_in_the_open.t  pick_and_shop_2.t  polywand.t  shop_payment.t  skilled_dagger_hazard.t  skills.t  skills_4.t  sokoban.t  strangulation.t  two_handed_shield.t  twoweapon.t  unihorn_blindness_1.t  val_quest.t  vault.t  wand.t  wishing.t
(+288 files in other folders)
